13 December 2016: Wouter
	- Fix nsd-control and ipv6 only.

8 December 2016: Wouter
	- tag 4.1.14
	- trunk contains 4.1.15 in development.

1 December 2016: Wouter
	- Fix restart of zone transfers when new config becomes available.
	- tag 4.1.14rc1

25 October 2016: Wouter
	- Fix #1132 for SERVFAIL zones perform backoff, and remembers the
	  timeout on next startup.
	- Save backoff timeout into xfrd.state file, this file has a higher
	  version number now.  Old files are skipped silently (causes
	  refresh) and created as new files upon exit.
	- Set number of rounds to 1; NSD will try every master once, then
	  wait for timeout or notify.
	- Fix axfr fallback for rounds to 1.

20 October 2016: Wouter
	- suppress compile warning in lex files.

18 October 2016: Wouter
	- Robust fix against missing master in tcp_open for xfrd.
	- More in depth fix for the previous.
	- Fix wildcards in include: config statements with chroot enabled.

27 September 2016: Wouter
	- NSD 4.1.13 tag.
	- trunk has 4.1.14 in development.
	- Fix null memcpy for radixtree with single link element.

19 September 2016: Wouter
	- Review comments Ralph: wrapped long lines and nicer example conf.

16 September 2016: Wouter
	- NSD 4.1.13rc1 tag.

15 September 2016: Wouter
	- Test for openssl init_crypto and init_ssl functions.

14 September 2016: Ralph
	- Fix OPENSSL_INIT_ADD_ALL_DIGESTS compatibility check

13 September 2016: Wouter
	- Fix double const in dname_const() function.
	- Silenced flex-generated sign-unsigned warning print with gcc
	  diagnostic pragma.

8 September 2016: Wouter
	- more extensible edns option handling.

2 September 2016: Wouter
	- Release of 4.1.12; trunk is 4.1.13 and the patch for 4.1.12 (that
	  does not contain the other changes to the trunk) is folded into
	  the trunk.
	- Fix #827: fix compile with openssl 1.1.0 with api=1.1.0.

25 August 2016: Wouter
	- Fix multimaster for not tried full zone transfer for a expired zone.